# textrans

./: .gitmodules  README.md
.github/workflows/: cmake.yml
cpp/: CMakeLists.txt  app.cc
data/find_correspondence/: spot_remesh.mtl
data/given_correspondence/: bunny.mtl  bunny_textured_charts.mtl
example/: find_correspondence.py  given_correspondence.py
textrans/: __init__.py  rasterize.py  util.py
uvtransfer/: __init__.py
